grasshopper-operator/tests/TestPolicies/NonOffendingPolicies/normal-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: normal-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: my-app # Selects pods with the label app=my-app
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: trusted-app # Allows traffic only from pods with the label app=trusted-app
    ports:
    - protocol: TCP
      port: 80 # Allows HTTP traffic
